result/namespaces/err_1.xml.err
./test/namespaces/err_1.xml:1: error: Failed to parse QName 'xmlns:'
<foo xmlns:="http://example.com/"/>
           ^
